--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "taco-trak",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.3.0",
